--- a/Online-Cab-Booking-App/src/main/resources/application.properties
+++ b/Online-Cab-Booking-App/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8888
+
+spring.datasource.url=jdbc:mysql://localhost:3306/sb201db
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=Dd@8105848723
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
