--- a/Online-Cab-Booking-App/src/main/resources/application.properties
+++ b/Online-Cab-Booking-App/src/main/resources/application.properties
@@ -1,10 +1,23 @@
+#changing the server port
 server.port=8888
-
-spring.datasource.url=jdbc:mysql://localhost:3306/sb201db
+#db specific properties
+spring.datasource.url=jdbc:mysql://localhost:3306/project
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Dd@8105848723
+spring.datasource.password=root
+#ORM s/w specific properties
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+
+#No handler found
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
+
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 
