--- a/Online-Cab-Booking-App/src/main/resources/application.properties
+++ b/Online-Cab-Booking-App/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8888
 spring.datasource.url=jdbc:mysql://localhost:3306/project
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Dd@8105848723
+spring.datasource.password=root
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
