--- a/Online-Cab-Booking-App/src/main/resources/application.properties
+++ b/Online-Cab-Booking-App/src/main/resources/application.properties
@@ -3,10 +3,10 @@
 
 server.port=9080
 #db specific properties
-spring.datasource.url=jdbc:mysql://localhost:3306/project
+spring.datasource.url=jdbc:mysql://localhost:3306/cabbooking
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Koti79@143
+spring.datasource.password=Arup@MySQL
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
